kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: python-app
  labels:
    app: python
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: python-app
          image: sweaty1111/python-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
