kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: python-app
spec:
  type: ClusterIP
  selector:
    app: python
  ports:
    - port: 80
      targetPort: 5000
